Updated sourcecode URLs

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Tom Honaker <general@e-f-w.com>
 sentence=Library for Newhaven Slim OLED displays
 paragraph=This library uses bit-banged SPI communication; only three pins are required, and they don't have to be hardware SPI. Driver also includes helper functions for easier implementation.
 category=Display
-url=https://github.com/
+url=https://github.com/ElectronicFantasyWorld/NHD_OLED_Driver
 architectures=*
