Updated library info

--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=Newhaven Slim OLED Driver
 version=1.0.0
-author=Tom Honaker
+author=Tom Honaker <general@e-f-w.com>
 maintainer=Tom Honaker <general@e-f-w.com>
 sentence=Library for Newhaven Slim OLED displays
 paragraph=This library uses bit-banged SPI communication; only three pins are required, and they don't have to be hardware SPI. Driver also includes helper functions for easier implementation.
